# server/swagger.json
@@ -678,7 +678,7 @@
                   "id": {
                     "type": "integer"
                   },
-                  "job_id": {
+                  "task_id": {
                     "type": "string"
                   },
                   "creator_id": {
@@ -870,7 +870,7 @@
         "produces": ["application/json"],
         "parameters": [
           {
-            "name": "job_id",
+            "name": "task_id",
             "type": "integer",
             "in": "query",
             "description": "Id of the task",
@@ -931,7 +931,7 @@
                   "id": {
                     "type": "integer"
                   },
-                  "job_id": {
+                  "task_id": {
                     "type": "integer"
                   },
                   "creator_id": {
@@ -976,7 +976,7 @@
                   "id": {
                     "type": "integer"
                   },
-                  "job_id": {
+                  "task_id": {
                     "type": "integer"
                   },
                   "creator_id": {
@@ -1033,7 +1033,7 @@
                   "id": {
                     "type": "integer"
                   },
-                  "job_id": {
+                  "task_id": {
                     "type": "integer"
                   },
                   "creator_id": {
@@ -1143,7 +1143,7 @@
           "type": "integer",
           "format": "int64"
         },
-        "job_id": {
+        "task_id": {
           "type": "integer"
         },
         "creator_id": {
